--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,6 @@
   --lg: 18px;
 }
 
-.inactive{
-  display: none;
-}
 
 body {
   margin: 0;
@@ -95,6 +92,8 @@ nav {
   height: 30px;
 }
 
+
+/*menu desktop*/
 .desktop-menu {
   position: absolute;
   background: var(--white);
@@ -139,6 +138,126 @@ nav {
   display: inline-block;
 }
 
+/*menu mobile*/
+.mobile-menu {
+  position: absolute;
+  top: 60px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;
+}
+
+.mobile-menu a {
+  text-decoration: none;
+  color: var(--black);
+  font-weight: bold;
+}
+
+.mobile-menu ul {
+  padding: 0;
+  margin: 24px 0 0;
+  list-style: none;
+}
+
+.mobile-menu ul li {
+  margin-bottom: 24px;
+}
+
+.mobile-menu ul:nth-child(1) {
+  border-bottom: 1px solid var(--very-light-pink);
+}
+.mobile-menu ul li {
+  margin-bottom: 24px;
+}
+.email {
+  font-weight: 300 !important;
+}
+.sign-out {
+  color: var(--hospital-green) !important;
+}
+.mobile-menu  .divSign ul:nth-child(1){
+  border-bottom: 0;
+}
+
+.inactive{
+  display: none;
+}
+
+{/*list product*/}
+.main-container{
+ margin-top: 30px;
+}
+.cards-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 240px);
+  gap: 26px;
+  place-content: center;
+}
+
+.product-card{
+  width: 240px;
+}
+
+.product-card img{
+  width: 240px;
+  height: 240px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.product-info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-info figure img{
+  width: 35px;
+  height: 35px;
+  margin-top: 12px;
+}
+
+.product-info figure {
+  margin: 0;
+}
+
+.product-info div p:nth-child(1){
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+.product-info div p:nth-child(2){
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--very-light-pink);
+}
+
+
+
+
+/*media querys*/
+@media (max-width:640px) {
+  .cards-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 140);
+}
+
+.product-card{
+  width: 140px;
+}
+
+
+.product-card img{
+  width: 140px;
+  height: 140px;
+}
+}
+
 @media (max-width: 640px) {
   .menu {
     display: block;
@@ -149,4 +268,16 @@ nav {
   .navbar-email {
     display: none;
   }
+
+  .desktop-menu{
+    display: none;
+  }
+
 }
+
+@media (min-width: 641px) {
+  .mobile-menu{
+    display: none;
+  }
+}
+
