--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* General */
 :root {
   --white: #FFFFFF;
   --black: #000000;
@@ -8,73 +9,66 @@
   --md: 16px;
   --lg: 18px;
 }
-
-
 body {
   margin: 0;
   font-family: 'Quicksand', sans-serif;
 }
+.inactive {
+  display: none;
+}
 
+
+/* Navbar (general) */
 nav {
   display: flex;
   justify-content: space-between;
   padding: 0 24px;
   border-bottom: 1px solid var(--very-light-pink);
 }
-
 .menu {
   display: none;
 }
-
 .logo {
   width: 100px;
 }
-
-.navbar-left {
-  display: flex;
-  margin-left: 12px;
-}
-
-.navbar-left ul{
-  margin-left: 12px;
-}
-
 .navbar-left ul,
-.navbar-rigth ul {
+.navbar-right ul {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
   align-items: center;
   height: 60px;
-
 }
-
+.navbar-left {
+  display: flex;
+}
+.navbar-left ul {
+  margin-left: 12px;
+}
 .navbar-left ul li a,
-.navbar-rigth ul li a{
+.navbar-right ul li a {
   text-decoration: none;
   color: var(--very-light-pink);
   border: 1px solid var(--white);
   padding: 8px;
   border-radius: 8px;
 }
-
 .navbar-left ul li a:hover,
-.navbar-rigth ul li a:hover{
-  color: var(--hospital-green);
+.navbar-right ul li a:hover {
   border: 1px solid var(--hospital-green);
+  color: var(--hospital-green);
 }
-
-.navbar-email{
+.navbar-email {
   color: var(--very-light-pink);
+  cursor: pointer;
   font-size: var(--sm);
   margin-right: 12px;
-  cursor: pointer;
 }
-.navbar-shopping-cart{
+.navbar-shopping-cart {
   position: relative;
 }
-.navbar-shopping-cart div{
+.navbar-shopping-cart div {
   width: 16px;
   height: 16px;
   background-color: var(--hospital-green);
@@ -86,51 +80,41 @@ nav {
   right: -3px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
-.navbar-shopping-cart img{
-  height: 30px;
-}
-
-
-/*menu desktop*/
+/* Menu en desktop */
 .desktop-menu {
   position: absolute;
-  background: var(--white);
   top: 60px;
   right: 60px;
+  background: var(--white);
   width: 100px;
   height: auto;
   border: 1px solid var(--very-light-pink);
   border-radius: 6px;
   padding: 20px 20px 0 20px;
 }
-
 .desktop-menu ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-
 .desktop-menu ul li {
   text-align: end;
 }
-
 .desktop-menu ul li:nth-child(1),
 .desktop-menu ul li:nth-child(2) {
   font-weight: bold;
 }
-
 .desktop-menu ul li:last-child {
   padding-top: 20px;
   border-top: 1px solid var(--very-light-pink);
 }
-
 .desktop-menu ul li:last-child a {
   color: var(--hospital-green);
   font-size: var(--sm);
 }
-
 .desktop-menu ul li a {
   color: var(--back);
   text-decoration: none;
@@ -138,33 +122,26 @@ nav {
   display: inline-block;
 }
 
-/*menu mobile*/
+/* Menu en mobile */
 .mobile-menu {
+  background-color: var(--white);
   position: absolute;
   top: 60px;
+  left: 0;
+  width: 100%;
   padding: 24px;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: space-between;
 }
-
 .mobile-menu a {
   text-decoration: none;
   color: var(--black);
   font-weight: bold;
+  /* margin-bottom: 24px; */
 }
-
 .mobile-menu ul {
   padding: 0;
   margin: 24px 0 0;
   list-style: none;
 }
-
-.mobile-menu ul li {
-  margin-bottom: 24px;
-}
-
 .mobile-menu ul:nth-child(1) {
   border-bottom: 1px solid var(--very-light-pink);
 }
@@ -172,18 +149,14 @@ nav {
   margin-bottom: 24px;
 }
 .email {
+  font-size: var(--sm);
   font-weight: 300 !important;
 }
 .sign-out {
+  font-size: var(--sm);
   color: var(--hospital-green) !important;
 }
-.mobile-menu  .divSign ul:nth-child(1){
-  border-bottom: 0;
-}
 
-.inactive{
-  display: none;
-}
 
 /* Aside (product detail y carrito) */
 aside {
@@ -327,77 +300,48 @@ aside {
 
 
 /* Product List */
-.main-container{
- margin-top: 30px;
-}
-.cards-container{
+.cards-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, 240px);
   gap: 26px;
   place-content: center;
+  margin-top: 20px;
 }
-
-.product-card{
+.product-card {
   width: 240px;
 }
-
-.product-card img{
+.product-card img {
   width: 240px;
   height: 240px;
   border-radius: 20px;
   object-fit: cover;
 }
-
-.product-info{
+.product-card .product-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.product-info figure img{
-  width: 35px;
-  height: 35px;
   margin-top: 12px;
 }
-
-.product-info figure {
+.product-card .product-info figure {
   margin: 0;
 }
-
-.product-info div p:nth-child(1){
+.product-card .product-info figure img {
+  width: 35px;
+  height: 35px;
+}
+.product-card .product-info div p:nth-child(1) {
   font-weight: bold;
   font-size: var(--md);
   margin-top: 0;
   margin-bottom: 4px;
 }
-
-.product-info div p:nth-child(2){
+.product-card .product-info div p:nth-child(2) {
   font-size: var(--sm);
   margin-top: 0;
   margin-bottom: 0;
   color: var(--very-light-pink);
 }
 
-
-
-
-/*media querys*/
-@media (max-width:640px) {
-  .cards-container{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 140);
-}
-
-.product-card{
-  width: 140px;
-}
-
-
-.product-card img{
-  width: 140px;
-  height: 140px;
-}
-}
 
 @media (max-width: 640px) {
   .menu {
@@ -409,16 +353,28 @@ aside {
   .navbar-email {
     display: none;
   }
-
-  .desktop-menu{
+  .desktop-menu {
     display: none;
   }
 
+  aside {
+    width: 100%;
+  }
+
+  .cards-container {
+    grid-template-columns: repeat(auto-fill, 140px);
+  }
+  .product-card {
+    width: 140px;
+  }
+  .product-card img {
+    width: 140px;
+    height: 140px;
+  }
 }
 
 @media (min-width: 641px) {
-  .mobile-menu{
+  .mobile-menu {
     display: none;
   }
 }
-
